feat (problem6) : 입력 forms 을 예외처리 기능